# sqfilms

./: .gitmodules  CMakeLists.txt  CMakePresets.json  Cargo.toml  Dockerfile  README.md
css/: main.css
data/: data.sql  reviews.db
js/: theme.js
sql/: data.sql  reviews.db
src/: api.c  api.h  api.rs  db.c  db.h  db.rs  main.c  main.rs
static/css/: common.css  index.css  main.css  new.css  theme.css
static/js/: app.js  create-review.js  delete-review-confirm.js  edit-review.js  theme.js
templates/: edit.html.tera  index.html.tera  new.html.tera
